--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,57 @@
         productos según fecha, identificador de producto y marca.
     </description>
 
+    <developers>
+        <developer>
+            <id>rubenmaderas</id>
+            <name>Ruben Maderas Prieto</name>
+            <email>maderasprieto@gmail.com</email>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:https://github.com/rubenmaderas/price-service.git</connection>
+        <tag>HEAD</tag>
+        <url>https://github.com/rubenmaderas/price-service</url>
+    </scm>
+
     <properties>
         <java.version>17</java.version>
+        <jakarta.validation.version>3.1.1</jakarta.validation.version>
+        <lombok.version>1.18.38</lombok.version>
+        <mapstruct.version>1.6.3</mapstruct.version>
     </properties>
 
     <dependencies>
+
+        <!-- jakarta -->
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>${jakarta.validation.version}</version>
+        </dependency>
+
+        <!-- lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- Mapstruct -->
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>${mapstruct.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
+            <version>${mapstruct.version}</version>
+            <scope>provided</scope>
+        </dependency>
 
         <!-- H2 -->
         <dependency>
